src/books/snapshots/freya_ob__books__array_orderbook__test__rotating_price-5.snap
---
source: src/books/array_orderbook.rs
expression: ob
---
ArrayOrderbook {
    best_bid: Some(
        Level {
            price: 1049,
            size: 150,
        },
    ),
    best_ask: Some(
        Level {
            price: 1051,
            size: 150,
        },
    ),
    bids: Buffer {
        buf: [
            Level {
                price: 1049,
                size: 150,
            },
            Level {
                price: 1045.193976625564,
                size: 146.1939766255644,
            },
            Level {
                price: 1034.355339059327,
                size: 135.3553390593274,
            },
            Level {
                price: 1018.134171618255,
                size: 119.1341716182545,
            },
            Level {
                price: 999,
                size: 100,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: -79228162514264337593543950335,
                size: 0,
            },
        ],
        limit: -79228162514264337593543950335,
        len: 5,
        cached_first: Some(
            Level {
                price: 1049,
                size: 150,
            },
        ),
    },
    asks: Buffer {
        buf: [
            Level {
                price: 1051,
                size: 150,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
            Level {
                price: 79228162514264337593543950335,
                size: 0,
            },
        ],
        limit: 79228162514264337593543950335,
        len: 1,
        cached_first: Some(
            Level {
                price: 1051,
                size: 150,
            },
        ),
    },
    ts: 0,
    sequence_id: 0,
    has_moved: false,
}
